# warden

./: .dockerignore  .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  requirements-aws.in  requirements-aws.txt  requirements-azure.in  requirements-azure.txt  requirements-dev.in  requirements-dev.txt  requirements-gcp.in  requirements-gcp.txt  requirements-pkcs11.in  requirements-pkcs11.txt  requirements-vault.in  requirements-vault.txt  requirements.in  requirements.txt  vercel.json
.github/: CODEOWNERS  dependabot.yml
api/: index.py
audit/: __init__.py  trail.py
control_plane/: __init__.py  api.py  api_keys.py  audit.py  auth.py  config.py  connect_sessions.py  connectors.py  credentials.py  crypto.py  database.py  dev_portal.py  errors.py  identity.py  integrations.py  observability.py  policy.py  preflight.py  providers.py  rate_limit.py  resources.py  schemas.py  sdk.py  secrets.py  service.py  showcase.py
demo/: README.md  __init__.py  launch.py  scenario_hard.py  scenario_soft.py  test_capability_replay.py
deploy/: k8s-maintenance-cronjobs.yaml  k8s-migrate-job.yaml  k8s.yaml
docs/: ALTERAUTH_READINESS_AUDIT.md  BEGINNERS_GUIDE.md  BLOG_AGENT.md  CREDENTIALS.md  IMPLEMENTATION_SCOPE.md  MVP_BUILD_STATUS.md  PRODUCTION.md  PROVIDERS.md  REFERENCE_INTEGRATIONS.md  RELEASING.md  TEST_PORTAL.md  TEST_PORTAL_BUILD_STATUS.md  WARDEN_READINESS_AUDIT.md  (+1 more)
sdk-python/: README.md  pyproject.toml
sdk-python/src/vouchins_warden/: __init__.py  cli.py  client.py
sdk-python/tests/: test_client.py
(+150 files in other folders)
